--- a/mymaster/sections/agent.tex
+++ b/mymaster/sections/agent.tex
@@ -1,6 +1,6 @@
 The manmade, intelligent autonomous agent would be different from a programme, in terms of it being able to operate like a free, thinking entity.
 Where a programme follows certain rules, an autonomous agent would only be constrained by mechanisms analogous to our biological constraints.
-It would be able to gradually evolve its perception, function and logic to match its experiences of a changing environment, and expand and explore its own cognitive abilities \cite{franklin_graesser_agents}
+If the agent was truly intelligent, it should be able to gradually evolve its perception, function and logic to match its experiences of a changing environment, and expand and explore its own cognitive abilities \cite{franklin_graesser_agents}
 As Alan Turing points out, and as we have discussed earlier, this would simply not be possible with discrete-state logic-gate systems.
 It was pointed out that discrete-state machines in the beginning of the current millenia would be able to fool a human for a very limited amount of time,
 and this is certainly the case today \cite{computing_machine_intelligence_turing}.
@@ -10,3 +10,16 @@ The question remains whether the conservation of momentum will hold if other tec
 One such technique is the artificial animal, the "animat", explored in detail by Stewart W. Wilson in 1985, and first proposed as the "child machine" by Alan Turing in 1950 \cite{wilson_animat} \cite{turing_computing_machine_intelligence}.
 
 \subsection{Animat}
+The basics of the animat approach is to work upwards, towards higher levels of intelligence.
+Essentially, there is a focus on the whole of the system, on the contrary to its parts as in competence oriented modeling.
+The requirements are an environment and an animat that has sufficient a sufficient sensor/motor system to satisfy its own needs.
+The animat is advancing through an increasingly difficult environment, with the goal of finding the minimum increase in animat complexity necessary to satisfy its own needs in the given environment.
+The environment is termed as the Problem Side, while the architecture of the animat is termed the Solution Side, and the point is to maintain a balance between the two sides to reach a satisfactory solution.
+Wilson claims that the animat approach might be key in developing machine perception.
+That is, developing an agent with abilities to develop its own understanding of the environment \cite{wilson_animat}.
+For an autonomous agent to have an subjective experience, one could argue that it is necessary to have perception.
+Combined with hardware and neural networks that are non-discrete, the animat approach might just be the technique required to develop such machine capabilities as can be coined truly intelligent, or conscious.
+
+
+
+
