--- a/mymaster/sections/iit.tex
+++ b/mymaster/sections/iit.tex
@@ -1,1 +1,10 @@
-blablablablabla
+Integrated Information Theory (IIT) has been proposed as a mathematical way to understand consciousness.
+Essentially, it revolves around analysing the phenomenology of a system.
+That is, how a causal structure experiences an environment.
+The theory tries to assume properties of consciousness (axioms), and from there it posulates the physical properties that must be necessary in a neural substrate hosting the system.
+The causal structure is based on measures of how a system is able to integrate information, and the tools provided is the specification of a cause-effect structure (CES).
+The amount of information is larger the higher the amount of possible states in the system. Integrated information is when there is no way to cut without loosing information.The CES is an unfolding of a model of the neural substrate, in the sense that the model is cut in every possible way (imagine cutting a network of nodes).
+The CES is mapped to the properties of experience, and the CES can be quantified by $\Phi$. \cite{tononi_phi3}
+
+Although IIT might seem overly abstract, the first tangible result was published as a study on the question "Why does space feel the way it does?".
+Here a model of the Visual Cortex 1 and 2 (V1 and V2) was cut into a CES, using the knowledge of the grid cells that have been proven to be important for localization \cite{haun_space}.
