--- a/mymaster/sections/agent.tex
+++ b/mymaster/sections/agent.tex
@@ -1,24 +1,23 @@
-The manmade, intelligent autonomous agent would be different from a programme, in terms of it being able to operate like a free, thinking entity.
-Where a programme follows certain rules, an autonomous agent would only be constrained by mechanisms analogous to our biological constraints.
-If the agent was truly intelligent, it should be able to gradually evolve its perception, function and logic to match its experiences of a changing environment, and expand and explore its own cognitive abilities \cite{franklin_graesser_agents}
-As Alan Turing points out, and as we have discussed earlier, this would simply not be possible with discrete-state logic-gate systems.
-It was pointed out that discrete-state machines in the beginning of the current millenia would be able to fool a human for a very limited amount of time,
-and this is certainly the case today \cite{computing_machine_intelligence_turing}.
-The progress made in computational cognitive science is truly astonishing, where competence oriented agents are modeling advanced human abilities.
-The agents often exhibit impressive performance, but they often lack in terms of general intelligence \cite{wilson_animat}.
-The question remains whether the conservation of momentum will hold if other techniques are not explored.
-One such technique is the artificial animal, the "animat", explored in detail by Stewart W. Wilson in 1985, and first proposed as the "child machine" by Alan Turing in 1950 \cite{wilson_animat} \cite{turing_computing_machine_intelligence}.
+The humanmade, intelligent autonomous agent would be different from a program in terms of it being able to operate like an independent, thinking entity.
+In contrast to a program that follows specific logical rules,  the only constraints of an autonomous agent would be the mechanisms imposed on it by its architecture and environment, which is analogous to our biological constraints.
+If the agent had real intelligence, it should be able to adapt its perception, function, and logic to match its experiences of a changing environment and expand and explore its cognitive abilities \cite{franklin_is_1997}.
+As Alan Turing points out, and as we have discussed in \vref{introduction}, this would not be possible with discrete-state logic-gate systems.
+However, Turing predicts that during the beginning of the current millennia, a discrete-state machine would be able to fool a human for a limited amount of time,
+which is indeed the case today \cite{turing_computing_2009}.
+The progress made in computational cognitive science is genuinely astonishing, where competence oriented agents are modeling advanced human abilities.
+The agents exhibit impressive performance, but they often lack in terms of general intelligence \cite{wilson_animat_1991}.
+The question remains whether the performance of artificially intelligent agents will continue to increase if we only continue to develop competence oriented agents. Further exploration of alternative methods may be appropriate.
+One such method is the artificial animal, the "animat," explored in detail by Stewart W. Wilson in 1985, and first proposed as the "child machine" by Alan Turing in 1950 \cite{wilson_animat_1991} \cite{turing_computing_2009}.
 
 \subsection{Animat}
-The basics of the animat approach is to work upwards, towards higher levels of intelligence.
-Essentially, there is a focus on the whole of the system, on the contrary to its parts as in competence oriented modeling.
-The requirements are an environment and an animat that has sufficient a sufficient sensor/motor system to satisfy its own needs.
-The animat is advancing through an increasingly difficult environment, with the goal of finding the minimum increase in animat complexity necessary to satisfy its own needs in the given environment.
-The environment is termed as the Problem Side, while the architecture of the animat is termed the Solution Side, and the point is to maintain a balance between the two sides to reach a satisfactory solution.
-Wilson claims that the animat approach might be key in developing machine perception.
-That is, developing an agent with abilities to develop its own understanding of the environment \cite{wilson_animat}.
-For an autonomous agent to have an subjective experience, one could argue that it is necessary to have perception.
-Combined with hardware and neural networks that are non-discrete, the animat approach might just be the technique required to develop such machine capabilities as can be coined truly intelligent, or conscious.
+The basics of the animat approach are to work upwards towards higher levels of intelligence.
+Essentially, there is a focus on the whole of the system, contrary to competence oriented modeling, which focuses on specific functions.
+The requirements are an environment that modeled after the problem side and an animat modeled after the solution side.   The animat needs to have a sufficient sensor/motor system to satisfy its own needs. It is put through an increasingly challenging environment, and the goal is to the minimum increase in animat complexity necessary to satisfy its own needs in the given environment.
+
+Wilson claims that the animat approach might be vital in developing machine perception.
+That is, developing an agent with abilities to develop its understanding of the environment \cite{wilson_animat_1991}.
+For an autonomous agent to have a subjective experience, one could argue that it is necessary to have perception.
+Combined with hardware and neural networks that are non-discrete, the animat approach might be the technique required to develop such machine capabilities as can be coined truly intelligent or conscious.
 
 
 
