--- a/mymaster/sections/snn.tex
+++ b/mymaster/sections/snn.tex
@@ -1,7 +1,7 @@
 Spiking Neural Networks (SNNs), often called The Third Generation of Artificial Neural Networks (ANNs), are designed after modern knowledge for neurobiology,
-with advanced neuron models based on what we know of synaptic connections between neurons, and what stimulates the membrane potential of the cells.
-This is inherently different than networks of simple logic gates, like The Multilayer Perceptron, and it is thought to open up new horizons of biologically inspired computing.
-We have yet to discover effective methods for training and simulation of SNNs, and some may argue that the Perceptron is good enough for the solutions that we would like to find using a logic-gate based computer.
-If we want to create autonomous systems that can efficiently mimick the capabilities of biological creatures, others may argue that systems closely related to the architecture of the very efficient brain, is the way forward.
+with advanced neuron models based on what we know of synaptic connections between neurons, and what stimulates the membrane potential of the cells.\cite{ghosh-dastidar_improved_2007}
+This is inherently different than networks of simple logic gates, like The Multilayer Perceptron, and it is thought to open up new horizons of biologically inspired computing.\cite{cowan_discussion_1990} \cite{aamir_accelerated_2018}
+As the complex neuron model of the SNNs may suggest, the SNNs are expensive to simulate with binary computers, and some may argue that the Perceptron is good enough for the solutions that we would like to find using a logic-gate based computer.
+If we want to create autonomous systems that can efficiently mimick the capabilities of biological creatures, others may argue that systems closely related to the architecture of the very efficient brain, is the way forward.\cite{lee_training_2016} \cite{cao_spiking_2015}.
 
 
