finished bss section and formatted essay. need to clean up and add conclusion

--- a/mymaster/essay.tex
+++ b/mymaster/essay.tex
@@ -1,11 +1,14 @@
 %\documentclass[journal]{IEEEtran} % for double column
-\documentclass[journal,12pt,onecolumn,draftclsnofoot,]{IEEEtran}
+\documentclass[UKenglish]{ifimaster}
 \usepackage[utf8]{inputenc}
-\usepackage[nospace]{varioref}
-
+\usepackage[T1]{fontenc, url, varioref}
+\urlstyle{sf}
 \usepackage[english]{babel}
-\usepackage{csquotes}
-\usepackage[backend=biber,style=ieee]{biblatex}
+\usepackage{textcomp, csquotes, varioref, graphicx, wrapfig}
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage[nameinlink]{cleveref}
+\usepackage[backend=biber,style=numeric-comp]{biblatex}
 \addbibresource{references.bib}
 
 \usepackage{graphicx}
@@ -13,188 +16,43 @@
 
 \usepackage{subfiles} % Best loaded last in the preamble
 
-\begin{document}
-\title{Evolution of Spiking Neural Network "Animats" Implemented on an Analog Neuromorphic System.}
-
+\title{An Essay on Evolution of Spiking Neural Network "Animats" Implemented on an Analog Neuromorphic System.}
 \author{Daniel~Sander~Isaksen}% <-this % stops a space
-\thanks{Kyrre~Glette}%
-\thanks{Manuscript received January 13, 2020; revised .}
 
-% The paper headers
-\markboth{Essay by Daniel Isaksen}%
-{Shell \MakeLowercase{\textit{et al.}}: Evoution of Spiking Neural Network "Animats" on a Physical Neuromorphic System.}
-
+\begin{document}
 \maketitle
 
 \begin{abstract}
 Will we ever build a neural substrate able to contain our human consciousness?
 \end{abstract}
 
-\section{Introduction}\label{sect:intro}
+\tableofcontents{}
+
+\chapter{Introduction}\label{sect:intro}
 \subfile{sections/introduction}
 
-\section{Evolutionary Algorithms}\label{sect:ea}
+\chapter{Evolutionary Algorithms}\label{sect:ea}
 \subfile{sections/evoalg}
 
-\section{Spiking Neural Networks}\label{sect:snn}
+\chapter{Spiking Neural Networks}\label{sect:snn}
 \subfile{sections/snn}
 
-\section{Neuromorphic Electronic Systems}\label{sect:neuromorphic}
+\chapter{Neuromorphic Electronic Systems}\label{sect:neuromorphic}
 \subfile{sections/neuromorphic2}
 
-\section{Autonomous Agents, Animats}\label{sect:agent}
+\chapter{Autonomous Agents, Animats}\label{sect:agent}
 \subfile{sections/agent}
 
-\section{Integrated Information Theory}\label{sect:iit}
+\chapter{Integrated Information Theory}\label{sect:iit}
 \subfile{sections/iit}
 
-\section{Related Works}
+\chapter{Related Works}
 \subfile{sections/albantakis}
-%\subsection{Something about evolution on neuromorphic hardware}
 
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
-%\begin{figure}[!t]
-%\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex,
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation results for the network.}
-%\label{fig_sim}
-%\end{figure}
+\chapter{Conclusion}
 
-% Note that the IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
-
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command,
-% and the \label for the overall figure must come after \caption.
-% \hfil is used as a separator to get equal spacing.
-% Watch out that the combined width of all the subfigures on a
-% line do not exceed the text width or a line break will occur.
-%
-%\begin{figure*}[!t]
-%\centering
-%\subfloat[Case I]{\includegraphics[width=2.5in]{box}%
-%\label{fig_first_case}}
-%\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{box}%
-%\label{fig_second_case}}
-%\caption{Simulation results for the network.}
-%\label{fig_sim}
-%\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat[]), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
-% Be aware that for subfig.sty to generate the (a), (b), etc., subfigure
-% labels, the optional argument to \subfloat must be present. If a
-% subcaption is not desired, just leave its contents blank,
-% e.g., \subfloat[].
-
-
-% An example of a floating table. Note that, for IEEE style tables, the
-% \caption command should come BEFORE the table and, given that table
-% captions serve much like titles, are usually capitalized except for words
-% such as a, an, and, as, at, but, by, for, in, nor, of, on, or, the, to
-% and up, which are usually not capitalized unless they are the first or
-% last word of the caption. Table text will default to \footnotesize as
-% the IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
-%
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
-
-
-% Note that the IEEE does not put floats in the very first column
-% - or typically anywhere on the first page for that matter. Also,
-% in-text middle ("here") positioning is typically not used, but it
-% is allowed and encouraged for Computer Society conferences (but
-% not Computer Society journals). Most IEEE journals/conferences use
-% top floats exclusively.
-% Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the
-% \fnbelowfloat command of the stfloats package.
-
-
-\medskip
 
 \printbibliography
-
-% biography section
-%
-% If you have an EPS/PDF photo (graphicx package needed) extra braces are
-% needed around the contents of the optional argument to biography to prevent
-% the LaTeX parser from getting confused when it sees the complicated
-% \includegraphics command within an optional argument. (You could create
-% your own custom macro containing the \includegraphics command to make things
-% simpler here.)
-%\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{mshell}}]{Michael Shell}
-% or if you just want to reserve a space for a photo:
-
-\begin{IEEEbiography}{Michael Shell}
-Biography text here.
-\end{IEEEbiography}
-
-% if you will not have a photo at all:
-\begin{IEEEbiographynophoto}{John Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
-
-% insert where needed to balance the two columns on the last page with
-% biographies
-%\newpage
-
-\begin{IEEEbiographynophoto}{Jane Doe}
-Biography text here.
-\end{IEEEbiographynophoto}
-
-% You can push biographies down or up by placing
-% a \vfill before or after them. The appropriate
-% use of \vfill depends on what kind of text is
-% on the last page and whether or not the columns
-% are being equalized.
-
-%\vfill
-
-% Can be used to pull up biographies so that the bottom of the last one
-% is flush with the other column.
-%\enlargethispage{-5in}
-
-
-
-% that's all folks
-
 \end{document}
 
 
