--- a/mymaster/sections/albantakis.tex
+++ b/mymaster/sections/albantakis.tex
@@ -1,4 +1,4 @@
-\subsection{Albantakis et al., Evolution of Integrated Causal Structures in Animats Exposed to Environments of Increasing Complexity, 2014}
+\section{Albantakis et al., Evolution of Integrated Causal Structures in Animats Exposed to Environments of Increasing Complexity, 2014}
 The study uses the animat approach, see sect. \vref{sect:agent}, to evolve autonomous agents on a traditional, discrete-state, computer.
 The animats are evolved using a modification of the Simple Genetic Algorithm, see sect. \vref{sect:ea}.
 As is required in the animat approach, the study varies the complexity of the task environments.
