--- a/mymaster/sections/eh.tex
+++ b/mymaster/sections/eh.tex
@@ -36,8 +36,9 @@ In this project, the analog NoC ASIC called HICANN is of particular interest\cit
  The HICANN is a full custom featuring configurable neural network arrays.
 The neuron model implemented is based on a spiking neural network model and is realized using Op-Amps and capacitors.
 While using analog circuitry to model neurons and synapses, the HICANN uses a digital, asynchronous bus interconnect, both on-chip and for external connections, featuring DACs and decoders.
+Manufactured in a 180 nm CMOS technology, the HICANN features 114,688 programmable dynamic synapses and up to 512 neurons \cite{zoschke_full_2017}.
 \cite{haddow_challenges_2011}\cite{trefzer_evolvable_2015}
-The HICANN is an essential component of the Physical Neuromorphic System of the Human Brain Project (HBP) \cite{markram_introducing_2011}, also known as BrainScaleS (Brain-inspired multiscale computation in neuromorphic hybrid systems)\cite{meier_mixed-signal_2015}.
+The HICANN is an essential component of the Physical Neuromorphic System of the Human Brain Project (HBP) \cite{markram_introducing_2011}, also known as BrainScaleS \cite{meier_mixed-signal_2015}, see \vref{sect:bss}.
 
 
 
