--- a/mymaster/sections/neuromorphic2.tex
+++ b/mymaster/sections/neuromorphic2.tex
@@ -22,7 +22,7 @@ Any utilization of the systems requires a programming framework.
 Lastly, the developers need to prove that the system has applicability to real-world problems.
 \cite{schuman_survey_2017}.
 
-\subsection{Models, Algorithms, Devices, and Frameworks}
+\section{Models, Algorithms, Devices, and Frameworks}
 There are several popular categories of spiking neuron models.
 
 \paragraph{Biologically Plausible and Biologically Inspired models} incorporate some aspects of biological systems, but that has been proved useful in applications.
@@ -70,8 +70,8 @@ A third mixed analog/digital system is BrainScaleS, which is the system of focus
 It has a wafer-scale analog architecture, which was also proposed by Mead \cite{mead_neuromorphic_1990} and works in a supertreshold mode because of the high rate of operation.
 \cite{schuman_survey_2017}
 
-\subsection{Evolutionary Hardware}\label{sect:eh}
+\section{Evolutionary Hardware}\label{sect:eh}
 \subfile{sections/eh}
 
-\subsection{BrainScaleS}
+\section{BrainScaleS}\label{sect:bss}
 \subfile{sections/bss}
