--- a/mymaster/sections/evoalg.tex
+++ b/mymaster/sections/evoalg.tex
@@ -25,7 +25,7 @@ The best solutions can then be saved, and the rest wiped out, for a new epoch to
 The SGA has inspired mind-boggling variations of algorithms under the relatively wide EA umbrella, and among these are the
 Island Model, NeuroEvolution, ..., and ... .
 
-\subsection{Standard Types of Recombination, Mutation and Selection}
+\section{Standard Types of Recombination, Mutation and Selection}
 (NEED TO BE FILLED OUT)
 Typical methods for recombination are ... .
 Here is how these work.
@@ -35,12 +35,12 @@ Here is how these work.
 Typical methods for selection are the roulette wheel, ... .
 Here is how these work.
 
-\subsection{The Island Model}
+\section{The Island Model}
 As a scheme for running multiple epochs in parallel, the heuristic of islands is probably adopted because of the natural isolation that occur on islands.
 The scheme normally includes migrations, which only happens a few times over an epoch of many generations.
 The Island Model can be useful for a more distributed exploration in the search, or for processing of a higher number of solutions per time, depending on the hardware.
 
-\subsection{NeuroEvolution}
+\section{NeuroEvolution}
 NeuroEvolution includes the use of neural networks in the optimization algorithm, where the networks are trained on a specific solution, which is then explored further using an EA.
 
 
