--- a/mymaster/sections/iit.tex
+++ b/mymaster/sections/iit.tex
@@ -10,8 +10,8 @@ Although IIT might seem overly abstract, the first tangible result was published
 Here a model of the Visual Cortex 1 and 2 (V1 and V2) was cut into a CES, using the knowledge of the grid cells that have been proven to be important for localization \cite{haun_why_2019}.
 
 The IIT is a central part of the related works of this essay, and thus, some parts need to be explained:
-\subsection{Causal Structures}
-\subsection{Conceptual Structures}
+\section{Causal Structures}
+\section{Conceptual Structures}
 
 In this project, I hope to utilize IIT as a way to analyze the perception of automated agents, evolved as SNN animats on BrainScaleS. (See \vref{sect:agent}, \vref{sect:snn}, \vref{sect:neuromorphic}).
 As the complexity and states of the animats is known, the animats can be analyzed.
